--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,3 +13,9 @@ body{
     color:#fff;
     background-color: purple;
 }
+
+/* .footer p {
+	margin-top: 25px;
+	font-size: 12px;
+    color: #fff;
+} */
