--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <div class="card-body">
         
         <!-- make a post req to /login route -->
-        <form action="/login" method="post">
+        <form action="/login" method="POST">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="text" class="form control" name="username" value="" >
