--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,18 +9,12 @@
     <div class="card-body">
         
         <!-- make a post req to /login route -->
-        <form action="/register" method="POST">
+        <form action="/submit" method="POST">
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" class="form control" name="username" value="" >
+                <input type="text" class="form control text-center" name="secret" placeholder="What's your secret?" value="" >
             </div>
 
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form control" name="password" value="" >
-            </div>
-
-            <button type="submit" class ="btn" name="button" autocomplete="off">Register</button>
+            <button type="submit" class ="btn" name="button" autocomplete="off">Submit</button>
         </form>
     
     </div>
