--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header'); %>
 
     <div class="jumbotron centered">
         <div class="container">
             <i class="fas fa-key fa-6x"></i>
-            <h1 class="display-3">🗝Secrets</h1>
+            <h1 class="display-3">Hush Hush</h1>
             <p class="lead">Don't keep your secrets,share them anonymously!</p>
             <hr>
            <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
@@ -14,4 +14,4 @@
 
 
 
-<%- include('partials/footer'); -%>
+<%- include('partials/footer'); %>
