--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 
  <!-- Bootstrap core css -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
- <link href="css/styles.css" rel="stylesheet">
+ <link rel="stylesheet" href="css/styles.css" >
  <link rel="favicon" href="favicon.ico">
 
    <!-- Bootstarp Scripts -->
