--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -3,7 +3,7 @@
     <div class="jumbotron text-center">
         <div class="container">
             <i class="fas fa-key fa-6x"></i>
-            <h1 class="display-3">🗝You've Discovered My Secret!</h1>
+            <h1 class="display-3">You've Discovered My Secret!</h1>
             <p class="lead">Chanchal Chowdhury is my favourite Actor.</p>
             <hr>
            <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out </a>
