--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,9 +30,19 @@
 <div class="col-sm-4">
     <div class="card-social-block">
         <div class="card-body">
-            <a class="btn btn-block" href="/auth/google" role="button">
-                <i class="fab fa-google"></i>
-                Sign up with Google</a>
+            <a class="btn-block btn-social btn-google" href="/auth/google" role="button">
+                <i class="fa-brands fa-google"></i>
+                Sign Up with Google</a>
+        </div>
+    </div>
+</div>
+
+<div class="col-sm-4">
+    <div class="card-social-block">
+        <div class="card-body">
+            <a class="btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+                <i class="fa-brands fa-facebook"></i>
+                Sign Up with Facebook</a>
         </div>
     </div>
 </div>
