--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,11 +27,11 @@
 
     
 <!-- Nav Bar -->
-<!-- <nav class="navbar navbar-nav navbar-expand-lg navbar-dark ">
+ <nav class="navbar navbar-nav navbar-expand-lg navbar-dark ">
 
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand" href="">🌍Travel Journal</p>
+        <p class="navbar-brand" href="">🤫Hush Hush</p>
       </div>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
@@ -42,20 +42,26 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
         <ul class="nav navbar-nav ms-auto ">
+          
           <li id="home">
             <a class="nav-link" href="/">HOME</a>
-          </li>           
-          <li id="about">
-            
-            <a class="nav-link" href="/about">ABOUT</a>
+          </li>  
+          
+          <li id="secrets">
+            <a class="nav-link" href="/secrets">SECRETS</a>
           </li>
-          <li id="contact">
-            <a class="nav-link" href="/contact">CONTACT</a>
+          
+          <li id="register">   
+            <a class="nav-link" href="/register">REGISTER</a>
           </li>
+          <li id="login">
+            <a class="nav-link" href="/login">LOGIN</a>
+          </li>
+
         </ul>
       </div>
     </div>
-  </nav> -->
+  </nav> 
 
 
 
