--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,8 @@
 
     <div class="jumbotron centered">
         <div class="container">
-            <i class="fas fa-key fa-6x"></i>
+            <i class="fas fa-user-secret fa-8x"></i>
+            
             <h1 class="display-3">Hush Hush</h1>
             <p class="lead">Don't keep your secrets,share them anonymously!</p>
             <hr>
