--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,15 +9,15 @@
     <div class="card-body">
         
         <!-- make a post req to /login route -->
-        <form action="/login" method="POST">
+        <form action="/register" method="POST">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" class="form control" name="username" value="" >
+                <input type="email" class="form control" name="username" placeholder="Enter email" >
             </div>
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form control" name="password" value="" >
+                <input type="password" class="form control" name="password" placeholder="Password" >
             </div>
 
             <button type="submit" class ="btn" name="button" autocomplete="off">Login</button>
@@ -28,31 +28,29 @@
 </div>
 
 <div class="col-sm-4">
-    <div class="card-social-block">
-        <div class="card-body">
-            <a class="btn-block btn-social btn-google" href="/auth/google" role="button">
-                <i class="fa-brands fa-google"></i>
-                Sign In with Google</a>
+ 
+        <div class="card">
+
+            <div class="card-body">
+                <a class="btn-block btn-social btn-google" href="/auth/google" role="button">
+                    <i class="fa-brands fa-google"></i>
+                    Sign In with Google</a>
+            </div>
+            </div>
+
+            <div class="card">
+            <div class="card-body">
+                <a class="btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
+                   <i class="fa-brands fa-facebook"></i>
+                   Sign In with Facebook
+               </a>
+       </div>
         </div>
+        
     </div>
-</div>
-
-<div class="col-sm-4">
-    <div class="card-social-block">
-        <div class="card-body">
-            <a class="btn-block btn-social btn-facebook" href="/auth/facebook" role="button">
-                <i class="fa-brands fa-facebook"></i>
-                Sign In with Facebook</a>
-        </div>
-    </div>
-</div>
 
 
 </div>
-
-
 </div>
 
-
-
-<%- include('partials/footer'); -%>
+<%- include('partials/footer') %>
