--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -2,12 +2,17 @@
 
     <div class="jumbotron text-center">
         <div class="container">
-            <i class="fas fa-key fa-6x"></i>
+            <i class="fas fa-user-secret fa-8x"></i>
             <h1 class="display-3">You've Discovered My Secret!</h1>
-            <p class="lead">Chanchal Chowdhury is my favourite Actor.</p>
+            
+           <% usersWithSecrets.forEach(function(user){ %>
+                <p class="secret-text"><%= user.secret %></p>
+           <% }); %>
+
+           
             <hr>
            <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out </a>
-           <a class="btn btn-dark btn-lg" href="/submit" role="button">Submit a Secret</a>
+           <a class="btn btn-dark btn-lg" href="/submit" role="button">Reveal your Secret</a>
         </div>
 
     </div>
