--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -2,16 +2,17 @@
 
     <div class="container">
         <div class="jumbotron centered">
-            <i class="fas fa-key fa-6x"></i>
-            <h1 class="display-3">🗝Secrets</h1>
-            <p class="lead">Don't keep your secrets,share them anonymously!</p>
+            <i class="fas fa-user-secret fa-8x"></i>
+            <h1 class="display-3">Secrets</h1>
+            <p class="secret-text">Don't keep your secrets,share them anonymously!</p>
             <hr>
 
                    <!-- make a post req to /login route -->
         <form action="/submit" method="POST">
-            <div class="form-group">
-                <input type="text" class="form control text-center" name="secret" placeholder="What's your secrect?" value="" >
-            </div>
+      
+                <div class="form-group">
+                    <input type="text" class="form control text-center" name="secret" placeholder="What's your secrect?" value="" >
+                </div>
 
 
             <button type="submit" class ="btn" name="button" autocomplete="off">Submit</button>
